--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Questions
 Text Domain: Questions
-Version: 1.0
+Version: 3.0
 Requires at least: 5.0
 Requires PHP: 7.3
 Author: LzoMedia
@@ -16,4 +16,5 @@ License version 2.0 (http://www.gnu.org/licenses/gpl-2.0.html)
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned
 with others.
+This theme is automatically update using github release system.
 */
